// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛✨🐣🗑️
|
| https://github.com/knative/client/pull/[#]
////

## v0.13.0 (unreleased)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| ✨
| Allow configuration sink prefixes
| https://github.com/knative/client/pull/571[#571]

| ✨
| Support multiple revisions on `kn revision delete`
| https://github.com/knative/client/pull/657[#657]

| 🎁
| Add human readable `kn route describe`
| https://github.com/knative/client/pull/643[#643]

| 🐛
| Show envFrom when running describe service or revision
| https://github.com/knative/client/pull/630[#630]

| 🎁
| Add E2E test for `kn source binding` commands
| https://github.com/knative/client/pull/634[#634]

| 🎁
| Add `--cmd` and `--arg` for customization of container entrypoint
| https://github.com/knative/client/pull/635[#635]

| ✨
| Add `no-wait` instead of `--async` and deprecate it
| https://github.com/knative/client/pull/639[#639]

| ✨
| Refactor service `create_test.go` and `update_test.go` to remove unecessary `sync` parameter in setup call
| https://github.com/knative/client/pull/656[#656]

| 🐛
| Fix `--image` flag to only allow single occurence
| https://github.com/knative/client/pull/647[#647]

| ✨
| Add `--wait` and `--no-wait` to service delete operation. Change service delete to wait by default.
| https://github.com/knative/client/pull/682[#682]

| 🎁
| Add `--user` flag for specifying the user id to run the container
| https://github.com/knative/client/pull/679[#679]
|===

## v0.12.0 (2020-01-29)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add `kn source binding` CRUD support for managing sink bindings
| https://github.com/knative/client/pull/625[#625]

| 🎁
| Update to Knative eventing v0.12.0
| https://github.com/knative/client/pull/621[#621]

| ✨️